# INFO_698_experiments

./: .dockerignore  .gitignore  Dockerfile  FORGE_input_feature_attribution_SPEC.txt  Makefile  README.md  audit_and_zip.ps1  docker-compose.yml  gitignore.txt  pyproject.toml
.devcontainer/: devcontainer.json
_app_template/static/css/: style.css
_app_template/static/js/: app.js
_app_template/templates/: eda.html  experiment.html  welcome.html
_shared/: eda.py  profiler.py  schema.py  splits.py
forge_experiments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/: README.md
projects/atlas/: README.md  project.yaml
projects/atlas/app/: server.py
projects/atlas/configs/: atlas_nn.yaml
projects/atlas/eda/: run_eda.py
projects/atlas/src/: eval.py  features.py  train.py
projects/genre/: Claude_prompt_06_22_26.txt  DATA_PIPELINE.md  FORGE_exp1_handoff.md  PLAN_genre_model1.md  README.md  README_STATUS.md  STATUS_2026-06-23.md  TODO.md  mk2_5_LOCKIN.txt  project.yaml  server.py  usage_ledger.json
projects/genre/after/: README.txt
projects/genre/app/: config.py  server.py
projects/genre/configs/: beardown.yaml
projects/genre/data/: README.md
projects/genre/eda/: README.md  build_spectrograms.py  run_eda.py
projects/genre/src/: bundle.py  dataio.py  features.py  predict.py  sanity_check.py  train.py
projects/phonon/: FORGE_phonon_handoff_README.md  MK2_README.md  README.md  RUNBOOK.md  STATUS_2026-06-25.md  project.yaml  requirements_phonon.txt
projects/phonon/app/: server.py
projects/phonon/eda/: run_eda.py  (+2 more)
tools/: export_bundle.py
(+51 files in other folders)
